--- a/src/Components/Popular/Popular.css
+++ b/src/Components/Popular/Popular.css
@@ -10,7 +10,7 @@
    font-size: 50px;
    font-weight: 600;
 }
-popukar hr {
+.popular hr {
     width: 200px;
     height: 6px;
     border-radius: 10px;
